test-suite/bugs/bug_13366.v
Class Functor (F : Type -> Type) : Type :=
  fmap : F nat.

Fail Definition blah := sum fmap.
(* used to be anomaly not an arity *)
